# mpris-player-info

./: Cargo.toml  Pipfile  Readme.md  active_player_state.py  active_players.py  interfaces.py  mpris_helper.py  player_state.py  suppress.py
config/dbus/: com.github.robinmarchart.mprisutils.service  org.mpris.MediaPlayer2.playerctld.service
config/systemd/: mpris-hide-server.service  mpris-player-info-waybar.service  mpris-player-info-waybar.socket  playerctld.service
hide-server/: Cargo.toml
hide-server/src/: main.rs
player-info/: Cargo.toml
player-info-waybar-cat/: Cargo.toml
player-info-waybar-cat/src/: main.rs
player-info/src/: main.rs  polybar.rs  waybar.rs  yambar.rs
server/: Cargo.toml
server/src/: active_player.rs  lib.rs  main.rs  player_info.rs  proxies.rs
src/: active_player.rs  active_player_info.rs  hide.rs  lib.rs  player_info.rs  proxies.rs  util.rs
toggle-hide/: Cargo.toml
toggle-hide/src/: main.rs
