[package]
name = "mpris-dbus"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.160", features = ["derive"], optional = true}
tokio = { workspace = true, features = ["macros"], optional = true}
zbus = { workspace = true }
tracing = {workspace = true, optional = true}

[profile.release]
lto = true
debug = true

[features]
default = []
hide_server = ["tracing"]
mpris_proxy = ["serde"]
hide_proxy = []
playerctld_proxy = []
hide = ["hide_proxy", "tracing"]
playerctld = ["playerctld_proxy", "tracing"]
player_info = ["mpris_proxy","tokio", "tracing"]
active_player_info = ["playerctld", "player_info"]
hide_active_player_info = ["active_player_info", "hide"]

[workspace]
members = ["hide-server", "toggle-hide", "player-info"]

[workspace.dependencies]
zbus = { version = "3.14.1", default-features = false, features = ["tokio"] }
tokio = { version = "1.32.0"}
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["std", "env-filter", "fmt", "ansi", "local-time", "time"] }
time = { version = "0.3.22", features = ["macros"] }

[package.metadata.cargo-all-features]
max_combination_size = 1
