[package]
name = "mpris-dbus"
version = "1.0.0"
edition = "2021"
default-run = "mpris-player-info"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.32.0", optional = true}
zbus = { version = "3.14.1", default-features = false }
tracing = {version = "0.1.37", optional = true}
serde = {version = ">=1.0.184", optional = true, features = ["derive"]}
clap = { version = "4.4.2", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter"], optional = true }
tracing-journald = {version = "0.3.0", optional = true}
libsystemd = {version = "0.6.0", optional = true}
time = { version = "0.3.22", features = ["macros"], optional = true }
anyhow = { version = "1.0.75", features = ["backtrace"], optional = true }
clap_complete = {version = "4.4.1", optional = true }

[dev-dependencies]
tokio-stream = { version = "0.1.14", default-features = false, features = [] }

[features]
default = ["hide_active_player_info", "hide_server", "zbus/tokio", "binary"]
hide_server = ["tracing"]
mpris_proxy = ["serde"]
hide_proxy = []
playerctld_proxy = []
hide = ["hide_proxy", "tracing"]
playerctld = ["playerctld_proxy", "tracing"]
player_info = ["mpris_proxy", "tracing", "tokio/macros"]
active_player_info = ["playerctld", "player_info"]
hide_active_player_info = ["active_player_info", "hide"]

binary = ["clap", "clap_complete", "anyhow"]

toggle_hide = ["zbus/tokio", "tokio/rt", "hide_proxy", "binary"]

info_base = ["zbus/tokio", "tokio/rt", "binary", "hide_active_player_info"]
info_polybar_yambar = ["time", "info_base", "tracing-subscriber/fmt", "tracing-subscriber/ansi", "tracing-subscriber/local-time"]
info_waybar = ["tracing-journald","tracing-subscriber/registry",  "libsystemd", "info_base"]
info_full = ["info_polybar_yambar", "info_waybar"]

info_waybar_cat = ["binary"]

hide_dbus_server = ["zbus/tokio", "tokio/rt", "hide_server", "tracing-journald","tracing-subscriber/registry"]

binary_full = ["info_full","toggle_hide", "info_waybar_cat", "hide_dbus_server"]

[[bin]]
name = "mpris-player-info"
required-features = ["binary"]

