[package]
name = "mpris-hide-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["rt"]}
zbus = { workspace = true }
mpris-dbus = {path = "..", version = "1.0.0", default-features = false, features = ["hide_server"]}
tracing-log = {workspace = true}
tracing-subscriber = {workspace = true, features = ["registry"]}
tracing = {workspace = true}
tracing-journald = {workspace = true}
