[package]
name = "mpris-player-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["rt"]}
mpris-dbus = {path = "..", version = "1.0.0", default-features = false, features = ["hide_active_player_info"]}
clap = { version = "4.4.2", features = ["derive"] }
zbus = {workspace = true}
tracing-log = {workspace = true}
tracing-subscriber = {workspace = true}
tracing = {workspace = true}
time = {workspace = true}
