[package]
name = "mpris-player-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, features = ["rt"]}
mpris-dbus = {path = "..", version = "1.0.0", default-features = false, features = ["hide_active_player_info"]}
clap = { workspace = true }
zbus = {workspace = true}
tracing-subscriber = {workspace = true, features = ["fmt", "ansi", "local-time"]}
tracing = {workspace = true}
tracing-journald = {workspace = true, optional = true}
time = {workspace = true, optional = true}
libsystemd = {version = "0.6.0", optional = true}

[features]
default = ["polybar_yambar","waybar"]
polybar_yambar = ["time"]
waybar = ["tracing-journald", "libsystemd"]
