[package]
name = "mpris-helper-state-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.64"
tokio = { version = "1.21.0", features = ["rt"] }
zbus = { version = "3.1.0", default-features = false, features = ["tokio"] }

[profile.release]
lto = true
